# esp32-presence

./: .gitignore  Cargo.toml  build.rs  cfg.toml.example  flowchart.drawio  sdkconfig.defaults
.cargo/: config.toml
src/: led.rs  main.rs  mqtt.rs  utils.rs  wifi.rs
